--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Hello world!</h1>
 
-    <p>I am a <strong>sentence</strong>.</p>
+    <p>I am a <strong>sentence<strong>.</p>
 
     <p><a href="https://ischool.uw.edu">Click here!</a></p>
 
